# developing-with-simconnect

./: .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.template  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  build.cmd
CppSimConnect/live-tests/: CMakeLists.txt  TestBackgroundHandler.cpp  TestConnection.cpp  TestEventGroupHandler.cpp  TestEventHandler.cpp  TestEventRegistry.cpp  TestEvents.cpp  TestInputGroups.cpp  TestMultiClient.cpp  TestNotificationGroups.cpp  TestSystemEvents.cpp  TestSystemState.cpp  TestTaggedClientData.cpp  live_connection.cpp  live_connection.hpp
CppSimConnect/tests/: CMakeLists.txt  DataBlockBuilderTests.cpp  DataBlockReaderTests.cpp  DataBlockTests.cpp  SimObjectRepositoryTests.cpp  TestClientDataDefinition.cpp  TestClientDataFrequency.cpp  TestDataDefinition.cpp  TestDataDefinition_Float32.cpp  TestDataDefinition_Float64.cpp  TestDataDefinition_Int32.cpp  TestDataDefinition_Int64.cpp  TestDataDefinition_TestString.cpp  TestDataFrequency.cpp  TestFlowEvents.cpp  TestLogger.cpp  TestNewClientDataDefinitions.cpp  TestPeriodLimits.cpp  TestSimObjectType.cpp  TestSimpleHandler.cpp  pch.cpp  pch.h
part-1/1-1 OpenClose in C/: CMakeLists.txt  OpenClose.sln  OpenClose.vcxproj  main.cpp
part-1/1-2 OpenClose in C++/: CMakeLists.txt  OpenClose.cpp  OpenClose.sln  OpenClose.vcxproj  OpenClose.vcxproj.filters
part-10/10-1 - MSFS 2024 RequestJetwayData/: CMakeLists.txt  MSFS 2024 - RequestJetwayData.sln  MSFS 2024 - RequestJetwayData.vcxproj  main.cpp
part-11/: CMakeLists.txt
part-11/11-1 - Simple ClientData in C/: 11-1 - Simple ClientData in C - Receiver.vcxproj  11-1 - Simple ClientData in C - Receiver.vcxproj.filters  11-1 - Simple ClientData in C - Sender.vcxproj  11-1 - Simple ClientData in C - Sender.vcxproj.filters  11-1 - Simple ClientData in C.sln  CMakeLists.txt  receiver.cpp  sender.cpp  shared.h
part-11/11-2 - Multiple Writing Clients in C/: 11-2 - Multiple Writing Clients in C - Ping.vcxproj  11-2 - Multiple Writing Clients in C - Pong.vcxproj  11-2 - Multiple Writing Clients in C.sln  CMakeLists.txt  ping.cpp  pong.cpp  shared.h
part-11/11-3 - PMDG MCP Monitor in C/: CMakeLists.txt  mcp_monitor.cpp
part-11/11-3 - PMDG MCP Monitor in C++/: 11-3 - PMDG MCP Monitor in C++.sln  11-3 - PMDG MCP Monitor in C++.vcxproj  11-3 - PMDG MCP Monitor in C++.vcxproj.filters  CMakeLists.txt  mcp_monitor.cpp
part-11/11-4 - PMDG CDU Screen in C/: CMakeLists.txt  cdu_screen.cpp
part-11/11-4 - PMDG CDU Screen in C++/: 11-4 - PMDG CDU Screen in C++.sln  11-4 - PMDG CDU Screen in C++.vcxproj  11-4 - PMDG CDU Screen in C++.vcxproj.filters  CMakeLists.txt  cdu_screen.cpp
part-11/11-5 - Mapped ClientData in C++/: 11-5 - Mapped ClientData in C++ - Receiver.vcxproj  11-5 - Mapped ClientData in C++ - Receiver.vcxproj.filters  11-5 - Mapped ClientData in C++ - Sender.vcxproj  11-5 - Mapped ClientData in C++.sln  CMakeLists.txt  receiver.cpp  sender.cpp  shared.hpp
part-11/11-5 - PMDG Electrical Power Up in C++/: CMakeLists.txt  electrical_power_up.cpp
part-11/11-6 - Custom ClientData in C++/: 11-6 - Custom ClientData in C++ - Receiver.vcxproj  11-6 - Custom ClientData in C++ - Sender.vcxproj  11-6 - Custom ClientData in C++ - Sender.vcxproj.filters  11-6 - Custom ClientData in C++.sln  CMakeLists.txt  receiver.cpp  sender.cpp  shared.hpp
part-11/11-6 - PMDG ELEC Dump in C/: CMakeLists.txt  elec_dump.cpp
part-11/11-7 - PingPong in C++/: 11-7 - PingPong in C++ - Ping.vcxproj  11-7 - PingPong in C++ - Ping.vcxproj.filters  11-7 - PingPong in C++ - Pong.vcxproj  11-7 - PingPong in C++ - Pong.vcxproj.filters  11-7 - PingPong in C++.sln  CMakeLists.txt  ping.cpp  pong.cpp  shared.hpp
part-11/11-8 - Selective PMDG ClientData in C++/: 11-8 - Selective PMDG ClientData in C++.sln  11-8 - Selective PMDG ClientData in C++.vcxproj  11-8 - Selective PMDG ClientData in C++.vcxproj.filters  CMakeLists.txt  mcp_selective.cpp
part-12/12-1 - Flow Events in C/: 12-1 - Flow Events in C.sln  12-1 - Flow Events in C.vcxproj  CMakeLists.txt  main.cpp
part-12/12-2 - Flow Events in C++/: 12-2 - Flow Events in C++.sln  12-2 - Flow Events in C++.vcxproj  CMakeLists.txt  main.cpp
part-13/13-1 - Simple CommBus Broadcast in C/: 13-1 - Simple CommBus Broadcast in C - Caller.vcxproj  13-1 - Simple CommBus Broadcast in C - Caller.vcxproj.filters  13-1 - Simple CommBus Broadcast in C - Listener.vcxproj  13-1 - Simple CommBus Broadcast in C - Listener.vcxproj.filters  13-1 - Simple CommBus Broadcast in C.sln  CMakeLists.txt  caller.cpp  listener.cpp  shared.h
part-13/13-2 - CommBus PingPong in C/: 13-2 - CommBus PingPong in C - Ping.vcxproj  13-2 - CommBus PingPong in C - Ping.vcxproj.filters  13-2 - CommBus PingPong in C - Pong.vcxproj  13-2 - CommBus PingPong in C - Pong.vcxproj.filters  13-2 - CommBus PingPong in C.sln  CMakeLists.txt  ping.cpp  pong.cpp  shared.h
part-2/: CMakeLists.txt  README.md  build-all.cmd
part-2/2-1 Polling for Messages in C/: CMakeLists.txt  MessagePolling.cpp  MessagePolling.vcxproj
part-2/2-1 RequestSystemState in C/: RequestSystemState.vcxproj.filters
part-2/2-1 SystemState/: SystemState.cpp  SystemState.sln  SystemState.vcxproj.filters
part-2/2-10 Exception Messages and SendID in C++/: ExceptionMessages.cpp  README.md
part-2/2-10 SubscribeToSystemEvent in C/: CMakeLists.txt  SubscribeToSystemEvent.vcxproj  main.cpp
part-2/2-11 SubscribeToSystemEvent in C/: SubscribeToSystemEvent.sln
part-2/2-11 SubscribeToSystemEvent in C++/: CMakeLists.txt  SubscribeToSystemEvent.cpp  SubscribeToSystemEvent.sln  SubscribeToSystemEvent.vcxproj  SubscribeToSystemEvent.vcxproj.filters
part-2/2-12 SubscribeToSystemEvent in C++/: SubscribeToSystemEvent.cpp  SubscribeToSystemEvent.sln  SubscribeToSystemEvent.vcxproj
part-2/2-2 Polling for Messages in C++/: CMakeLists.txt  MessagePolling.cpp  MessagePolling.vcxproj
part-2/2-3 Windows Messaging in C/: CMakeLists.txt  WindowsMessaging.cpp  WindowsMessaging.h  WindowsMessaging.vcxproj.filters  framework.h  resource.h  targetver.h
(+343 files in other folders)
