# Part 11 - Client Data

add_subdirectory("11-1 - Simple ClientData in C")
add_subdirectory("11-2 - Multiple Writing Clients in C")
add_subdirectory("11-3 - PMDG MCP Monitor in C++")
add_subdirectory("11-4 - PMDG CDU Screen in C++")
add_subdirectory("11-5 - Mapped ClientData in C++")
add_subdirectory("11-6 - Custom ClientData in C++")
add_subdirectory("11-7 - PingPong in C++")
