# Part 2: Messaging basics

add_subdirectory("2-1 Polling for Messages in C")
add_subdirectory("2-2 Polling for Messages in C++")
#add_subdirectory("2-3 Windows Messaging in C")
add_subdirectory("2-4 Windows Messaging in C++")
add_subdirectory("2-5 Windows Event in C")
add_subdirectory("2-6 Windows Event in C++")
add_subdirectory("2-7 RequestSystemState in C")
add_subdirectory("2-8 RequestSystemState in C++")
add_subdirectory("2-9 Exception Messages and SendID in C++")
add_subdirectory("2-10 SubscribeToSystemEvent in C")
add_subdirectory("2-11 SubscribeToSystemEvent in C++")
